--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     "require": {
         "php": "^8.2.0",
         "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.0",
-        "laravel/ui": "^4.0"
+        "laravel/tinker": "^2.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^2.0",
@@ -19,7 +18,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^8.1",
-        "phpunit/phpunit": "^11.0"
+        "phpunit/phpunit": "^12.0"
     },
     "config": {
         "optimize-autoloader": true,
